@@ -6,7 +6,7 @@
  * See the COPYING file for the terms of usage and distribution.
  */
 
-#include <log4cpp/Portability.hh>
+#include "PortabilityImpl.hh"
 
 #include <log4cpp/PatternLayout.hh>
 #include <log4cpp/Priority.hh>
