@@ -1,5 +1,10 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-10-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* include/log4cpp/config-win32.h, src/PortabilityImpl.hh,
+	src/Makefile.am: worked around header definition bug in MSVC by
+	aliasing cstdlib/cstring functions in 'std::'. See #628211.
+	
 2002-10-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* include/log4cpp/PatternLayout.hh, src/PatternLayout.cpp: 
 	replaced PatternLayout implementation: it now preparses the message
